// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`followedBy '' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`followedBy 'thisthat' conditional success tests AST to match snapshot 1`] = `
{
  "name": "after",
  "range": {
    "from": {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "to": {
      "column": 5,
      "index": 4,
      "line": 1,
    },
  },
  "value": {
    "name": "before",
    "range": {
      "from": {
        "column": 1,
        "index": 0,
        "line": 1,
      },
      "to": {
        "column": 5,
        "index": 4,
        "line": 1,
      },
    },
    "value": "this",
  },
}
`;

exports[`followedBy 'this' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'that'",
  ],
  "pos": {
    "column": 5,
    "index": 4,
    "line": 1,
  },
}
`;

exports[`followedBy 'that' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`followedBy 'thatthis' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`followedBy 'foo' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;
